kube/home/home-automation/zigbee2mqtt/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  hostnames:
    - z2m.home.cianfr.one
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: zigbee2mqtt
          port: 8080
          weight: 1
